# mark2Word

./: .gitignore  README.md  pyproject.toml
docs/: base-theme.yaml
docs/examples/: showcase-base.yaml  showcase-theme.yaml  showcase.docx  showcase.md
skills/mark2word/: SKILL.md
skills/mark2word/agents/: openai.yaml
skills/mark2word/assets/: base-theme.yaml
skills/mark2word/references/: theme-design.md
skills/mark2word/scripts/: mark2word.py
skills/mark2word/scripts/mark2word/: __init__.py  emit.py  errors.py  parser.py  plugins.py  theme.py
src/mark2word/: __init__.py  ast.py  cli.py  defaults.yaml  emit.py  errors.py  list_format.py  lists.py  oxml_helpers.py  parser.py  paths.py  plugins.py  sections.py  slug.py  sync_skill.py  theme.py  theme_validate.py
tests/: test_cli.py  test_emit_coverage.py  test_features.py  test_hardening.py  test_list_format.py  test_phase1.py  test_theme_loading.py
