[project]
name = "mark2word"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sean Mullan", email = "sean@seanmullan.com" }
]
requires-python = ">=3.13"
dependencies = [
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
mark2word = "mark2word:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
